Configured jwt and token receiving